syntax = "proto3";

package learning_cards.v1;

option go_package = "github.com/iamvkosarev/learning-cards/pkg/proto/learning_cards/v1;learning_cards";

enum CardSideType {
    CARD_SIDE_NULL = 0;
    CARD_SIDE_JAPANESE = 1;
}

enum GroupVisibility {
    NULL = 0;
    PRIVATE = 1;
    PUBLIC = 2;
    UNLISTED = 3;
}

enum Mark {
    MARK_NULL = 0;
    MARK_A = 1;
    MARK_B = 2;
    MARK_C = 3;
    MARK_D = 4;
    MARK_E = 5;
}

enum CardAnswer {
    EASY = 0;
    GOOD = 1;
    HARD = 2;
    FAIL = 3;
}